--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   path_provider: ^1.1.0
   google_maps_flutter: 0.5.21+3
   meta: ^1.1.6
+  bitmap: ^0.0.5
 
 dev_dependencies:
   flutter_test:
